*7569* fix grid cell truncation

--- a/styles/controllers/grid/grid.less
+++ b/styles/controllers/grid/grid.less
@@ -165,11 +165,10 @@ div.pkp_controllers_grid {
 	}
 
 	.row_file {
-		position: absolute;
 		width: 100%;
 		top: 50%;
 		line-height: 24px;
-		margin-top: -1em;
+		margin-top: 0.5em;
 	}
 
 	.row_file a.pkp_controllers_linkAction {
